Update and rename Counting_Phrases.ipynb to Counting_Multiple_Phrases_Example.ipynb

--- a/Counting_Multiple_Phrases_Example.ipynb
+++ b/Counting_Multiple_Phrases_Example.ipynb
@@ -16,7 +16,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.preprocessing import MultiLabelBinarizer\n",
         "\n",
-        "#!python3 -m spacy download en_core_web_sm"
+        "!python3 -m spacy download en_core_web_sm"
       ]
     },
     {
